# AI_Document_Assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
app/: celery_app.py  main.py  minio_client.py
app/ai/: gemini_client.py  generator_prompt.py
app/api/: dependencies.py  exception.py  lifespan.py  router.py
app/auth/: auth_dependencies.py  auth_repository.py  auth_router.py  auth_schemas.py  auth_service.py
app/chat/: chat_repository.py  chat_router.py  chat_schemas.py  chat_service.py
app/core/: config.py  log.py  security.py  settings.py
app/db/: session.py
app/documents/: document_repository.py  document_router.py  document_schemas.py  document_service.py  minio_service.py
app/models/: __init__.py  chat_history_model.py  chunk_model.py  document_model.py  refresh_model.py  user_model.py
app/processing/: document_processing.py
app/redis/: rate_limiter.py
app/websocket/: ws_router.py
app/worker/: tasks.py
