[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
[tool.uv]
no-binary-package = ["torch"]
[project]
name = "ai-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi[standart]>=0.139.0",
    "google-genai>=2.11.0",
    "langchain-text-splitters>=1.1.2",
    "minio>=7.2.20",
    "passlib[cryptcontext]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "unstructured>=0.24.1",
    "uvicorn>=0.49.0",
]
